--- a/learn-certs-pr/exams/77-419.yml
+++ b/learn-certs-pr/exams/77-419.yml
@@ -20,7 +20,7 @@ levels:
 - beginner
 skills:
 - Erstellen und Formatieren von Inhalten (25-30%)
-- Verwalten von SharePoint-Websites (30-35%)
+- Verwalten von SharePoint sites (30-35%)
 - Teilnahme an Benutzergemeinschaften (15-20%)
 - Konfigurieren und Konsumieren von Website-Suchergebnissen (15-20%)
 roles:
