--- a/learn-certs-pr/exams/mb-200.yml
+++ b/learn-certs-pr/exams/mb-200.yml
@@ -8,7 +8,7 @@ displayName: MB-200
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'> Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
 
   Kandidaten für dieses examens sind funktionale Berater, die Zugang zu den Funktionen und der Funktionalität des unternehmenslizenzierten Produkts haben. Als funktionaler Berater kennt der Kandidat gebündelte Versionen von Features, arbeitet aber nicht in erster Linie mit diesen gebündelten Produkten.
@@ -32,7 +32,7 @@ skills:
 - Erstellen und Verwalten des Benutzererlebnisdesigns (20-25%)
 - Verwalten von Entitäten und Daten (15-20%)
 - Sicherheit implementieren (5-10%)
-- Integration umsetzen (15-20%)
+- Integration implementieren (15-20%)
 - Durchführung von Lösungsimplementierungen und Tests (25-30%)
 roles:
 - functional-consultant
@@ -55,8 +55,8 @@ paths:
 - uid: learn-dynamics.implementing-customer-engagement-online
 - uid: learn-bizapps.automate-process-using-flow
 - uid: learn-bizapps.create-use-analytics-reports-power-bi
-- uid: learn-dynamics.get-started-portals
-- uid: learn-dynamics.work-with-portals
+- uid: learn-bizapps.get-started-power-apps-portals
+- uid: learn-bizapps.extend-power-apps-portals
 relatedCertifications:
 - related:
     uid: certification.d365-functional-consultant-sales
