--- a/learn-certs-pr/exams/pl-900.yml
+++ b/learn-certs-pr/exams/pl-900.yml
@@ -7,32 +7,32 @@ uid: exam.pl-900
 displayName: PL-900
 summary: |-
   <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 13. Juli 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 13. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
 
-  Kandidaten für dieses examens sind Benutzer, die die Produktivität verbessern möchten, indem sie die Funktionen der Power Platform verstehen lernen, grundlegende Geschäftsprozesse mit Power Automate automatisieren, grundlegende Datenanalysen mit Power BI durchführen, um geschäftliche Erkenntnisse zu gewinnen, und durch die Erstellung einfacher Power-App Canva-App-Erfahrungen effektiver handeln und leistungsfähige Chatbots ohne Verwendung von Code erstellen.
-subTitle: Dieses examens misst Ihre Fähigkeit, den Geschäftswert und die Kernkomponenten von Power Platform zu verstehen und einzuschätzen und Ihre Fähigkeit, den Geschäftswert von Power BI und Microsoft Flow zu demonstrieren.
+  Kandidaten für diese Prüfung möchten die Produktivität verbessern, indem sie die Funktionen der Power Platform verstehen, grundlegende Geschäftsprozesse mit Power Automate automatisieren, grundlegende Datenanalysen mit Power BI durchführen, effektiver handeln, indem sie einfache Power Apps-Erfahrungen erstellen und mithilfe von Power Virtual Agents leistungsstarke Chatbots erstellen.
+subTitle: Diese Prüfung misst Ihre Fähigkeit, den Geschäftswert von Power Platform zu beschreiben. Identifizieren Sie die Kernkomponenten von Power Platform. Demonstrieren Sie die Funktionen von Power BI. Beschreiben der Funktionen von Power Apps. Demonstrieren Sie die Funktionen von Power Automate und den Geschäftswert von Power Virtual Agents.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Nnn
 practiceTestUrl: https://www.mindhub.com/p/MU-PL-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 locales:
 - en
 providers:
-  - providerType: pearson-vue
-    examUrl: 'https://examregistration.microsoft.com/?locale=de-de&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900'
-  - providerType: certiport
-    examUrl: http://www.certiport.com/locator
-  - providerType: gsi
-    examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer   
+- providerType: pearson-vue
+  examUrl: 'https://examregistration.microsoft.com/?locale=de-de&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900'
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
+- providerType: gsi
+  examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer
 levels:
 - beginner
 skills:
-- Der Inhalt dieser Prüfung wird am 13. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
-- Den Geschäftswert der Power Platform verstehen (20-25%)
+- Der Inhalt dieser Prüfung wurde am 13. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Den Geschäftswert der Power Platform verstehen (15-20%)
 - Identifizieren der Kernkomponenten von Power Platform (15-20%)
-- Beschreiben Sie den Geschäftswert von Power BI (10-15%)
-- Den Geschäftswert von Power Apps beschreiben (15-20%)
-- Den Geschäftswert von Power-Automate beschreiben (15-20%)
+- Demonstrieren Sie die Funktionen von Power BI (15-20%)
+- Beschreiben Sie die Funktionen von Power Apps (15-20%)
+- Demonstrieren Sie die Funktionen von Power Automate (15-20%)
 - Den Geschäftswert von Power Virtual Agents veranschaulichen (10-15%)
 roles:
 - developer
