--- a/learn-certs-pr/exams/az-120.yml
+++ b/learn-certs-pr/exams/az-120.yml
@@ -7,7 +7,7 @@ uid: exam.az-120
 displayName: AZ-120
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Learn more</a>.</strong><br/><br/></div><div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 20. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Learn more</a>.</strong><br/><br/></div><div style='font-weight&#58;bold;'>Der Inhalt dieser Prüfung wird am 21. Juli 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sollten Architekten oder Ingenieure sein, die über umfassende Erfahrung und Kenntnisse der SAP-Systemlandschaft und der Industriestandards verfügen, die für den langfristigen Betrieb einer SAP-Lösung unter Microsoft Azure spezifisch sind.
@@ -16,7 +16,7 @@ summary: |-
 
   Architekten oder Ingenieure von Azure für SAP-Workload-Partner arbeiten mit Cloud-Administratoren, Cloud-Datenbankadministratoren und Kunden zusammen, um Lösungen zu implementieren.
 
-  Ein Kandidat für diese Prüfung sollte über umfangreiche Erfahrung und Kenntnisse in SAP-Anwendungen verfügen&#58; SAP HANA, S / 4HANA, SAP NetWeaver, SAP BW / 4HANA, Betriebssystemserver für SAP-Anwendungen und -Datenbanken, Azure-Portal, ARM-Vorlagen, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster Recovery-Design, Datenschutz Konzepte und Vernetzung.
+  Ein Kandidat für diese Prüfung sollte über umfangreiche Erfahrung und Kenntnisse in SAP-Anwendungen verfügen&#58; SAP HANA, S/4HANA, SAP NetWeaver, SAP BW/4HANA, Betriebssystemserver für SAP-Anwendungen und -Datenbanken, Azure-Portal, ARM-Vorlagen, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster Recovery-Design, Datenschutz Konzepte und Vernetzung.
 
   Für diese Prüfung wird dringend empfohlen, zusätzlich zu den SAP-HANA- und Linux-Zertifizierungen eine Azure Administrator Associate- oder Azure Solutions Architect Expert-Zertifizierung zu erwerben.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Migrieren von SAP Workloads nach Azure, Entwerfen einer Azure-Lösung zur Unterstützung von SAP Workloads, Erstellen und Bereitstellen von Azure SAP Workloads, Validieren der Azure-Infrastruktur für SAP Workloads und die Azure SAP-Architektur operationalisieren.'
@@ -53,6 +53,9 @@ relatedCertifications:
 - related:
     uid: certification.azure-for-sap-workloads-specialty
 resources:
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung in Azure für SAP Workloads Specialty und über die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AOMr
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
