--- a/learn-certs-pr/exams/az-204.yml
+++ b/learn-certs-pr/exams/az-204.yml
@@ -71,8 +71,8 @@ products:
 - azure-traffic-manager
 - azure-virtual-machines
 courses:
-- uid: course.az-020t00
 - uid: course.az-204t00
+- uid: course.az-020t00
 paths:
 - uid: learn.create-serverless-applications
 - uid: learn.connect-your-services-together
@@ -86,7 +86,7 @@ relatedCertifications:
     uid: certification.azure-developer
 resources:
 - title: Reise zur Zertifizierung
-  description: Informieren Sie sich über die nötigen Schritte für eine Zertifizierung als Azure AI Engineer Associate und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+  description: Informieren Sie sich über die nötigen Schritte für eine Zertifizierung als Azure Developer Associate und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4woK5
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
