--- a/learn-certs-pr/exams/az-220.yml
+++ b/learn-certs-pr/exams/az-220.yml
@@ -17,10 +17,11 @@ summary: |-
 
   Der Azure IoT-Entwickler arbeitet mit Dateningenieuren und anderen Interessengruppen zusammen, um eine erfolgreiche Geschäftsintegration sicherzustellen.
 
-  Ein Kandidat für dieses examens sollte über Erfahrung in der Implementieren von Azure-Services verfügen, die eine IoT-Lösung bilden, einschließlich Datenspeicheroptionen, Datenanalyse, Datenverarbeitung und Plattform-as-a-Service-Optionen. IoT-Entwickler müssen in der Lage sein, die Konfigurationseinstellungen von Azure IoT-Services im Codeteil einer IoT-Lösung zu erkennen und bestimmte IoT-Codierungsaufgaben in mindestens einer von Azure unterstützten Sprache auszuführen, einschließlich C #, Node, C oder Python.
+  Ein Kandidat für dieses examens sollte über Erfahrung in der Implementieren von Azure-Services verfügen, die eine IoT-Lösung bilden, einschließlich Datenspeicheroptionen, Datenanalyse, Datenverarbeitung und Plattform-as-a-Service-Optionen. IoT-Entwickler müssen in der Lage sein, die Konfigurationseinstellungen von Azure IoT-Services im Codeteil einer IoT-Lösung zu erkennen und bestimmte IoT-Codierungsaufgaben in mindestens einer von Azure unterstützten Sprache auszuführen, einschließlich C#, Node, C oder Python.
 subTitle: 'Dieses Examen misst Ihre Fähigkeit, die IoT-Lösungsinfrastruktur zu implementieren. Bereitstellung und Verwaltung von Geräten; Implementieren von Lösungen auf Azure IoT Edge-Geräten; Daten verarbeiten und verwalten; Überwachung, Fehlerbehebung und Optimierung von IoT-Lösungen; und Sicherheit implementieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4nBeC
+practiceTestUrl: https://www.mindhub.com/p/MU-AZ-220?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-220&examname=Exam%20AZ-220:%20Microsoft%20Azure%20IoT%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-220
 locales:
 - en
