--- a/learn-certs-pr/exams/az-303.yml
+++ b/learn-certs-pr/exams/az-303.yml
@@ -34,14 +34,28 @@ roles:
 - solution-architect
 products:
 - azure
+paths:
+- uid: learn.architect-network-infrastructure
+- uid: learn.architect-storage-infrastructure
+- uid: learn.architect-compute-infrastructure
+- uid: learn.architect-infrastructure-operations
+- uid: learn.architect-data-platform
+- uid: learn.architect-messaging-serverless
+- uid: learn.architect-modern-apps
+- uid: learn.architect-api-integration
+- uid: learn.architect-migration-bcdr
 exams:
 - uid: exam.az-304
 courses:
 - uid: course.az-303t00
+- uid: course.az-030t00
 relatedCertifications:
 - related:
     uid: certification.azure-solutions-architect
 resources:
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure Solutions Architect Expert und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AJyF
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
