--- a/learn-certs-pr/exams/az-500.yml
+++ b/learn-certs-pr/exams/az-500.yml
@@ -39,7 +39,7 @@ skills:
 - Verwalten von Identität und Zugriff (20-25%)
 - Plattform-Schutz implementieren (35-40%)
 - Verwaltung von Sicherheitsvorgängen (15-20%)
-- Daten und Anwendungen sichern (30-35%)
+- Sichern von Daten und Anwendungen (30-35%)
 roles:
 - security-engineer
 products:
@@ -62,6 +62,9 @@ relatedCertifications:
 - related:
     uid: certification.azure-security-engineer
 resources:
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure Security Engineer Associate und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AJyG
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
