--- a/learn-certs-pr/exams/mb-901.yml
+++ b/learn-certs-pr/exams/mb-901.yml
@@ -8,7 +8,7 @@ displayName: MB-901
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 10. Juli 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 10. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
 
   Dieses Examen behandelt die Positionierung und die Vorteile der Einführung von Dynamics 365.
@@ -29,8 +29,8 @@ providers:
 levels:
 - beginner
 skills:
-- Der Inhalt dieser Prüfung wird am 10. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
-- Identifizieren Sie Microsoft-Plattformkomponenten für Dynamics 365 (30-35%).
+- Der Inhalt dieser Prüfung wurde am 10. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Identifizieren Sie Microsoft-Plattformkomponenten für Dynamics 365 (30-35%)
 - Beschreiben künstlicher Intelligenz und gemischter Realität in Dynamics 365 (10-15%)
 - Beschreiben modellbasierter Apps (25-30%)
 - Beschreiben von Finanz- und Betriebsanwendungen (25-30%)
