--- a/learn-certs-pr/exams/ms-900.yml
+++ b/learn-certs-pr/exams/ms-900.yml
@@ -8,12 +8,14 @@ displayName: MS-900
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 8. Juli 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 8. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
 
   Diese Prüfung ist für Kandidaten, die Ihre grundlegenden Kenntnisse zu Überlegungen und Vorteilen von der Einbindung von Cloud Diensten im allgemeinen und des Software as a Service (SaaS) Modells unter Beweis stellen möchten. Die Prüfung umfasst auch Kenntnisse über die verfügbaren Optionen und Vorteile einer Implementierung von Microsoft 365 Cloud- Service-Angeboten.
 
-  Die Prüfung kann ergänzend vor Prüfungen zu Cloud Computing und Technologie wie Office 365, Microsoft Intune, Azure Information Protection (AIP) und Windows 10 genommen werden.
+  Kandidaten sollten über die erforderlichen Kenntnisse verfügen, um Lösungen zu empfehlen, die sich mit allgemeinen organisatorischen IT-Herausforderungen befassen, und um Microsoft 365-Lösungen von der Konkurrenz auf dem Markt abzuheben. Die Kandidaten sollten auch über grundlegende Kenntnisse der Angebote, Optimierung der Lizenzierung im Hinblick auf Kosteneffizienz und Supportoptionen für Unternehmen verfügen.
+
+  Kandidaten sollten in der Lage sein, zwischen den Services und Produkten von Microsoft (Microsoft 365, Azure und Dynamics 365) zu unterscheiden.
 subTitle: Stellen Sie unter Beweis, dass Sie Cloud-Konzepte, Microsoft 365-Dienste und -Konzepte, Sicherheit, Compliance, Datenschutz und Vertrauen in Microsoft 365 sowie Microsoft 365 Preise und Support verstehen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVw
@@ -31,11 +33,11 @@ providers:
 levels:
 - beginner
 skills:
-- Der Inhalt dieser Prüfung wird am 8. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
-- Cloud-Konzepte beschreiben (15-20%)
+- Der Inhalt dieser Prüfung wurde am 8. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Cloud-Konzepte beschreiben (10-15%)
 - Beschreiben der wichtigsten Microsoft 365-Dienste und -Konzepte (30-35%)
-- Beschreiben der Sicherheits-, Compliance-, Datenschutz- und Vertrauensoptionen in Microsoft 365 (25-30%)
-- Beschreiben der Preis- und Supportoptionen für Microsoft 365 (25-30%)
+- Sicherheit, Konformität, Datenschutz und Vertrauenswürdigkeit unter Microsoft 365 verstehen (30-35%)
+- Beschreiben der Preis- und Supportoptionen für Microsoft 365 (20-25%)
 roles:
 - administrator
 products:
